cmake_minimum_required(VERSION 3.10)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/chainOfResponsability)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/command)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/iterator)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/mediator)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/memento)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/observer)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/state)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/strategy)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/template)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/visitor)


