cmake_minimum_required(VERSION 3.10)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/abstractFactory)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/builder)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/factory)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/prototype)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/singleton)


