cmake_minimum_required(VERSION 3.10)

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/adapter)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/bridge)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/composite)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/decorator)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/facade)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/flyweight)
add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/proxy)



